--- a/app/src/main/res/xml/recipe_widget_provider_info.xml
+++ b/app/src/main/res/xml/recipe_widget_provider_info.xml
@@ -6,5 +6,5 @@
     android:minWidth="140dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="100000"
+    android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"></appwidget-provider>
