Readded Espresso test cases for opening recipes. Fixed state instances saving. Fixed widget functionality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,16 @@
         android:id="@+id/rv_recipe_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        />
 
-    </android.support.v7.widget.RecyclerView>
+    <TextView
+        android:id="@+id/tv_main_error_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:text="No internet connection or empty results"
+        android:textSize="28sp"
+        android:visibility="gone"/>
 
 </FrameLayout>
