--- a/app/src/main/res/layout/fragment_step_detail.xml
+++ b/app/src/main/res/layout/fragment_step_detail.xml
@@ -14,6 +14,13 @@
             android:layout_width="match_parent"
             android:layout_height="400dp" />
 
+        <ImageView
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            android:id="@+id/iv_step_details_image"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
+
         <View
             android:id="@+id/frag_step_deta_divider"
             android:layout_width="match_parent"
