--- a/app/src/main/res/layout/recipe_widget_provider.xml
+++ b/app/src/main/res/layout/recipe_widget_provider.xml
@@ -1,61 +1,82 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/widget_margin">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_recipe1"
+    <LinearLayout
+        android:id="@+id/widget_ll_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="1. Nutella Pie"
-        android:padding="7dp"
-        android:textSize="@dimen/widget_text_size"
-        android:textColor="@color/colorPrimaryText"
-        android:background="@color/colorPrimary"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="@dimen/widget_margin"
+        android:visibility="visible">
 
-    <TextView
-        android:id="@+id/tv_recipe2"
+        <TextView
+            android:id="@+id/tv_recipe1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:padding="7dp"
+            android:text="1. Nutella Pie"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="@dimen/widget_text_size" />
+
+        <TextView
+            android:id="@+id/tv_recipe2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            android:padding="7dp"
+            android:text="2. Brownies"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="@dimen/widget_text_size" />
+
+        <TextView
+            android:id="@+id/tv_recipe3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:padding="7dp"
+            android:text="3. Yellow Cake"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="@dimen/widget_text_size" />
+
+        <TextView
+            android:id="@+id/tv_recipe4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            android:padding="7dp"
+            android:text="4. Cheesecake"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="@dimen/widget_text_size" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/widget_ll_ings"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="2. Brownies"
-        android:padding="7dp"
-        android:textSize="@dimen/widget_text_size"
-        android:textColor="@color/colorPrimaryText"
-        android:background="@color/colorPrimaryDark"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/colorPrimaryDark"
+        android:visibility="invisible">
 
-    <TextView
-        android:id="@+id/tv_recipe3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="3. Yellow Cake"
-        android:padding="7dp"
-        android:textSize="@dimen/widget_text_size"
-        android:textColor="@color/colorPrimaryText"
-        android:background="@color/colorPrimary"/>
+        <TextView
+            android:id="@+id/widget_tv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="@dimen/card_detail_size"
+            android:text="BACK"
+            android:layout_margin="5dp"/>
 
-    <TextView
-        android:id="@+id/tv_recipe4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="4. Cheesecake"
-        android:padding="7dp"
-        android:textSize="@dimen/widget_text_size"
-        android:textColor="@color/colorPrimaryText"
-        android:background="@color/colorPrimaryDark"/>
+        <TextView
+            android:id="@+id/widget_tv_ings"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="15sp" />
 
-    <!--TextView
-        android:id="@+id/appwidget_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:background="#09C"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" /-->
+    </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
